--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
     <title>Pomodoro Timer</title>
+    <meta name="title" content="Pomodoro Timer">
+    <meta name="description" content="Pomodor Timer App by @ericoutinho">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ericoutinho.github.io/pomodoro-timer/">
+    <meta property="og:title" content="Pomodoro Timer">
+    <meta property="og:description" content="Pomodor Timer App by @ericoutinho">
+    <meta property="og:image" content="https://ericoutinho.github.io/pomodoro-timer/assets/pomodoro-timer-meta-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ericoutinho.github.io/pomodoro-timer/">
+    <meta property="twitter:title" content="Pomodoro Timer">
+    <meta property="twitter:description" content="Pomodor Timer App by @ericoutinho">
+    <meta property="twitter:image" content="https://ericoutinho.github.io/pomodoro-timer/assets/pomodoro-timer-meta-image.jpg">
+
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/svg">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
